--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title>Page of TsaoYoung</title>
 </head>
 <body bgcolor="black" text="yellow">
-<center><h1>what the hell</h1></center>
+<center><h1>hello gay</h1></center>
 </body>
 </html>
